INCLUDE_DIRECTORIES(
  ${ARTIS_BINARY_DIR}/src
  ${ARTIS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIRS}
  ${Boost_LIBRARY_DIRS})

ADD_EXECUTABLE(artis-star main.cpp ${MIXED_TESTS_HPP})
SET_TARGET_PROPERTIES(artis-star PROPERTIES ${ARTIS_APP_PROPERTIES})

TARGET_LINK_LIBRARIES(artis-star
  ${Boost_SYSTEM_LIBRARY}
  ${Boost_TIMER_LIBRARY})

INSTALL(TARGETS artis-star DESTINATION bin)