INCLUDE_DIRECTORIES(
  ${ARTIS_BINARY_DIR}/src
  ${ARTIS_SOURCE_DIR}/src
  ${Boost_INCLUDE_DIRS}
  ${GLIBMM_INCLUDE_DIRS}
  ${LIBXML_INCLUDE_DIRS})

LINK_DIRECTORIES(
  ${GLIBMM_LIBRARY_DIRS}
  ${LIBXML_LIBRARY_DIR})

SET(DTSS_HPP Coordinator.hpp Dynamics.hpp GraphManager.hpp Simulator.hpp)

INSTALL(FILES ${DTSS_HPP} DESTINATION ${ARTIS_INCLUDE_DIRS}/kernel/dtss)